# cmake_example

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.bat
exe/: CMakeLists.txt  main.cpp
libA/: CMakeLists.txt
libA/include/: libA.h
libA/src/: impl.cpp
libA/test/: CMakeLists.txt  base_tests.cpp  helper.hpp  main.cpp  perf_tests.cpp
presentation/: CMake_best_practices.html
